[gd_scene load_steps=4 format=3 uid="uid://bf3s8fmugytir"]

[ext_resource type="Script" uid="uid://bpbaokty73w62" path="res://UI/GameOver/game_over.gd" id="1_l4wb3"]
[ext_resource type="PackedScene" uid="uid://ck3ss0rfky61o" path="res://Scene/game_manager.tscn" id="2_yl4v2"]
[ext_resource type="PackedScene" uid="uid://oxa5skj8w1yn" path="res://main_scene.tscn" id="3_hmyx4"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_l4wb3")
game_scene = ExtResource("2_yl4v2")
main_scene = ExtResource("3_hmyx4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Game_Over" type="Label" parent="CanvasLayer"]
z_index = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -298.0
offset_top = 100.0
offset_right = 312.0
offset_bottom = 237.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Game Over!!"

[node name="Restart_Buttum" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -366.0
offset_right = 82.0
offset_bottom = -268.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="Gomain_Buttum" type="Button" parent="CanvasLayer"]
offset_left = 473.0
offset_top = 411.0
offset_right = 667.0
offset_bottom = 490.0
text = "Go Main"

[connection signal="pressed" from="CanvasLayer/Restart_Buttum" to="." method="_on_restart_buttum_pressed"]
[connection signal="pressed" from="CanvasLayer/Gomain_Buttum" to="." method="_on_gomain_buttum_pressed"]
